--- a/Styles/_slider.scss
+++ b/Styles/_slider.scss
@@ -1,28 +1,27 @@
 @import "./variables";
-@import "./mixins";
 @include rotate;
 /* settings and design for the carousel slider presentation */
 .slider-box {
-  @include fontNtext($borderRds: 3rem, $boxShdw: $sliderShadow);
+  border-radius: 3rem;
+  box-shadow: $sliderShadow;
   padding: 10rem;
   .slider {
-    @include displaySet(
-      $dspl: flex,
-      $jusCont: center,
-      $alItms: center,
-      $position: relative,
-      $zIndx: 900
-    );
-    @include sizesNgaps(
-      $padding: 0rem,
-      $margin: auto,
-      $width: 20rem,
-      $height: 15rem
-    );
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 900;
+    padding: 0rem;
+    margin: auto;
+    width: 20rem;
+    height: 15rem;
     transform-style: preserve-3d;
     animation: rotate 40s linear infinite;
     span {
-      @include sizesNgaps($width: 100%, $height: 100%, $top: 0, $left: 0);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
       position: absolute;
       transform-origin: center;
       transform-style: preserve-3d;
@@ -34,11 +33,12 @@
         border: $primaryColor outset 0.5rem;
       }
       img {
-        @include sizesNgaps($width: 100%, $height: 100%, $top: 0, $left: 0);
-        @include fontNtext(
-          $borderRds: 3rem,
-          $border: $primaryColor outset 0.3rem
-        );
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 3rem;
+        border: $primaryColor outset 0.3rem;
         position: absolute;
         object-fit: contain;
         transition: 3s;
@@ -65,7 +65,8 @@ html[data-page="index-german"] .h4-title {
   .slider-box {
     padding: 8rem;
     .slider {
-      @include sizesNgaps($width: 18rem, $height: 13rem);
+      width: 18rem;
+      height: 13rem;
       span {
         transform: rotateY(calc(var(--i) * 45deg)) translateZ(25rem);
       }
@@ -76,7 +77,8 @@ html[data-page="index-german"] .h4-title {
   .slider-box {
     padding: 8rem;
     .slider {
-      @include sizesNgaps($width: 18rem, $height: 13rem);
+      width: 18rem;
+      height: 13rem;
       span {
         transform: rotateY(calc(var(--i) * 45deg)) translateZ(25rem);
       }
@@ -87,7 +89,8 @@ html[data-page="index-german"] .h4-title {
   .slider-box {
     padding: 6rem;
     .slider {
-      @include sizesNgaps($width: 14rem, $height: 11rem);
+      width: 14rem;
+      height: 11rem;
       span {
         transform: rotateY(calc(var(--i) * 45deg)) translateZ(18rem);
       }
@@ -98,7 +101,8 @@ html[data-page="index-german"] .h4-title {
   .slider-box {
     padding: 4rem;
     .slider {
-      @include sizesNgaps($width: 10rem, $height: 9rem);
+      width: 10rem;
+      height: 9rem;
       span {
         transform: rotateY(calc(var(--i) * 45deg)) translateZ(13rem);
       }
@@ -109,7 +113,8 @@ html[data-page="index-german"] .h4-title {
   .slider-box {
     padding: 2rem;
     .slider {
-      @include sizesNgaps($width: 8rem, $height: 7rem);
+      width: 8rem;
+      height: 7rem;
       span {
         transform: rotateY(calc(var(--i) * 45deg)) translateZ(10rem);
       }
