responsive contact page

--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -12,4 +12,5 @@
 @import "./animations";
 @import "./styleFiles";
 @import "./cursor";
+@import "./sharingToggle";
 // Style.scss - the main scss file.
