--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -98,9 +98,10 @@
   // Contact direct Social Media
   .contact-directly {
     display: flex;
+    width: 100%;
     // flex-direction: row;
     li {
-      width: 15%;
+      width: 20%;
       border-radius: 50%;
       margin: 0.5rem;
       padding: 0.5rem;
@@ -291,48 +292,51 @@
       width: 22rem !important;
     }
   }
+  .contact-options-list {
+    display: flex;
+  }
   #social-media-3d {
     display: none;
   }
 }
 /* Media query for mobile phones */
 @media screen and (max-width: 480px) {
-  .container {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
+  body {
+    width: 150%;
   }
   .contact-form,
   .my-files {
     padding: 0.5rem;
     margin: 1.5rem 0.5rem;
     max-width: 23rem;
+    font-size: 1rem;
   }
-  .contact-directly {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    .contact-options {
-      display: flex;
-    }
-    li {
-      margin: 0.5rem 1.5rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    a {
-      padding: 0 2rem;
-      font-size: 1rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-  }
+  // .contact-directly {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   text-align: center;
+  //   flex-direction: column;
+  //   .contact-options {
+  //     display: flex;
+  //   }
+  //   li {
+  //     margin: 0.5rem 1.5rem;
+  //     display: flex;
+  //     justify-content: center;
+  //     align-items: center;
+  //     text-align: center;
+  //     flex-direction: column;
+  //   }
+  //   a {
+  //     padding: 0 3rem;
+  //     font-size: 1rem;
+  //     display: flex;
+  //     justify-content: center;
+  //     align-items: center;
+  //     text-align: center;
+  //   }
+  // }
   .form {
     input,
     textarea {
@@ -340,6 +344,14 @@
       margin: 0 2rem;
     }
   }
+  // .contact-options-list {
+  //   display: flex;
+  //   border: red 1 rem solid;
+  //   li {
+  //     margin: 0.5rem 0.8rem;
+  //     flex-direction: column;
+  //   }
+  // }
   #social-media-3d {
     display: none;
   }
