adding sharing toggle

--- a/Styles/sharingToggle.scss
+++ b/Styles/sharingToggle.scss
@@ -1,12 +1,16 @@
 @import "./variables";
 
 .share-social-media {
+  position: fixed;
+  bottom: 0rem;
+  left: -58rem;
   height: 20rem;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 40%;
   margin: 0 30%;
+  z-index: 999;
   i {
     font-size: 3rem;
     color: white;
@@ -22,7 +26,7 @@
   position: relative;
   width: 28rem;
   height: 28rem;
-  background: rgba(218, 194, 241, 0.459);
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,8 +45,57 @@
   cursor: pointer;
   font-size: 2em;
   transition: 1.25s;
+  z-index: 1000;
 }
-
+.sharing-menu.active {
+  bottom: 6rem; /* Position when the menu is open */
+  left: 12rem; /* Position when the menu is open */
+  li {
+    scale: 1;
+    transition: 1s;
+  }
+}
 .sharing-menu.active .sharing-toggle {
   transform: rotate(360deg);
+  box-shadow: 0 6px 8px $primaryColor, 0 0 0 2px #333, 0 0 0 8px #fff;
+}
+.sharing-menu.active {
+  background: rgba(218, 194, 241, 0.459);
+}
+.sharing-menu li {
+  position: absolute;
+  left: 0;
+  transition: 0.8s;
+  transform: rotate(calc(360deg / 8 * var(--i)));
+  transform-origin: 14rem;
+  scale: 0;
+  transition-delay: calc(0.05s * var(--i));
+}
+.sharing-menu.active li {
+  scale: 1;
+}
+.sharing-menu li a {
+  position: relative;
+  display: flex;
+  transform: rotate(calc(360deg / -8 * var(--i)));
+  width: 6rem;
+  height: 6rem;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 1.75em;
+}
+.sharing-menu li a:hover {
+  background-color: var(--clr);
+}
+.sharing-toggle:hover {
+  border: $primaryColor outset 0.5rem;
+}
+// Responsivness
+@media screen and (max-width: 480px) {
+  .share-social-media {
+    display: none;
+  }
 }
