sharing toggle styles

--- a/Styles/_images.scss
+++ b/Styles/_images.scss
@@ -38,7 +38,7 @@
   width: 22rem;
   height: auto;
   border-color: $primaryColor;
-  bottom: -80rem;
+  bottom: -40%;
 }
 // Responsivness
 @media screen and (max-width: 1800px) {
