--- a/Styles/sharingToggle.scss
+++ b/Styles/sharingToggle.scss
@@ -2,15 +2,17 @@
 
 .share-social-media {
   position: fixed;
-  bottom: 0rem;
-  left: -58rem;
+  bottom: -10%;
+  left: -35%;
   height: 20rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: start;
   width: 40%;
   margin: 0 30%;
   z-index: 999;
+  transform: translateY(-50%);
+
   i {
     font-size: 3rem;
     color: white;
@@ -94,6 +96,18 @@
   border: $primaryColor outset 0.5rem;
 }
 // Responsivness
+@media screen and (max-width: 1110px) {
+  .share-social-media {
+    transform: scale(0.7);
+    bottom: 1%;
+    left: -40%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .share-social-media {
+    display: none;
+  }
+}
 @media screen and (max-width: 480px) {
   .share-social-media {
     display: none;
