sharing toggle styles

--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -243,6 +243,12 @@
   .github-list-item {
     background: #181717;
   }
+  .xing-list-item {
+    background: #007a33;
+  }
+  .discord-list-item {
+    background: #5865f2;
+  }
 }
 /* Media query for tablets and smaller desktops */
 @media screen and (max-width: 1450px) {
