--- a/Styles/_portfolioItems.scss
+++ b/Styles/_portfolioItems.scss
@@ -23,7 +23,7 @@
     &:hover {
       background-color: #a0eb8285;
       background-image: $portfolioBg;
-      border: 1rem outset transparent;
+      border: outset transparent;
       box-shadow: $mainShadow;
       transform: scale(1.05);
       z-index: 1000;
@@ -55,7 +55,6 @@
         transition: 1s;
       }
     }
-
     .portfolio-item-icons {
       display: flex;
       justify-content: center;
