--- a/Styles/style.css
+++ b/Styles/style.css
@@ -277,7 +277,7 @@ header .icon-top-draculady {
   z-index: 500;
   border-radius: 50%;
   background-color: #9d62eb;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
 }
 header .icon-top-draculady img {
   width: 100%;
@@ -285,7 +285,6 @@ header .icon-top-draculady img {
 header .icon-top-draculady:hover {
   transition: 2s;
   transform: scale(1.05);
-  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
 }
 header .icon-draculady {
   display: block;
@@ -296,13 +295,12 @@ header .icon-draculady {
   z-index: 100;
   border-radius: 50%;
   background-color: #9d62eb;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
 }
 header .icon-draculady img {
   width: 100%;
 }
 header .icon-draculady:hover {
-  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
   transition: 2s;
   transform: scale(1.05);
 }
@@ -946,7 +944,7 @@ html[data-page=index-german] .h4-title {
 .portfolio-items .portfolio-item:hover {
   background-color: rgba(160, 235, 130, 0.5215686275);
   background-image: radial-gradient(rgba(0, 153, 255, 0.5), rgba(123, 255, 0, 0.5), rgba(255, 0, 255, 0.5), rgba(255, 251, 4, 0.5));
-  border: 1rem outset transparent;
+  border: outset transparent;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   transform: scale(1.05);
   z-index: 1000;
@@ -1136,8 +1134,9 @@ html[data-page=index-german] .h4-title {
 .tool i:hover,
 .skill i:hover {
   font-size: 3rem;
-  color: #ffd900;
+  color: #ffffff;
   transition: 1s;
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
 }
 .tool p,
 .skill p {
@@ -1265,20 +1264,23 @@ html[data-page=index-german] .h4-title {
   width: 20%;
   border-radius: 50%;
   margin: 0.5rem;
-  padding: 0.5rem;
 }
 .contact-options-divs .contact-directly li i {
   align-items: center;
   text-align: center;
   justify-content: center;
   font-size: 2.5rem;
-  padding: 0.5rem;
+  padding: 2rem;
 }
 .contact-options-divs .contact-directly li a {
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: center;
+}
+.contact-options-divs .contact-directly li i:hover {
+  color: white;
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
 }
 
 .social-media-3d-menu {
