--- a/Styles/_styleFiles.scss
+++ b/Styles/_styleFiles.scss
@@ -5,70 +5,52 @@
   justify-content: center;
   align-items: center;
 }
-.my-files {
-  display: inline-block;
-  position: static;
-  z-index: 900;
-  padding: 1.5rem;
-  margin: 0 1rem;
-  max-width: 40rem;
-  min-height: 20rem;
-  font-size: x-large;
-  background-color: $form-BG;
-  line-height: 3rem;
-  border: 0.1rem solid rgba(177, 177, 177, 0.548);
-  border-radius: 3rem;
-  box-shadow: $mainShadow;
-  transition: 1s;
-
-  a {
-    color: #000000;
-    transition: 1s;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    text-decoration: none;
-    padding: 0.5rem 0;
-    text-align: left;
-  }
-  a:hover {
-    font-weight: bolder;
-    text-shadow: 0.3rem 0.3rem 0.3rem rgb(127, 169, 223);
-  }
-  i {
-    font-size: x-large;
-    color: $primaryColor;
-    transition: 1s;
-  }
-  i:hover {
-    transform: scale(1.5);
-  }
-  &:hover {
-    text-shadow: 0.1rem 0.2rem 0.4rem rgb(249, 249, 253);
-    box-shadow: $boxShadow;
-  }
-}
-.files {
+.all-files {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-wrap: wrap;
+  img {
+    width: 15rem;
+    margin: 1rem 1.5rem;
+    border: $primaryColor 0.5rem outset;
+    border-radius: 2rem;
+  }
   .file-item {
-    display: flex;
-    border: $primaryColor 0.3rem outset;
-    padding: 0.7rem;
-    width: 100%;
-    border-radius: 1rem;
-    margin: 1rem;
+    box-shadow: $mainShadow;
+    border-radius: 4rem;
+    margin: 1.5rem 0.5rem;
+    width: 25rem;
+    border: 0.5rem $paragraph-BG solid;
+    z-index: 1000;
+  }
+  .file-item:hover {
+    border: 0.2rem $primaryColor solid;
+  }
+  .button-div {
+    pointer-events: auto;
+  }
+  button a {
     align-items: center;
-    &:hover {
-      border: $primaryColor 0.3rem inset;
+    justify-content: center;
+  }
+  .file-title {
+    margin: 1rem 0;
+    font-size: 2rem;
+  }
+}
+
+// Responsiveness
+@media screen and (max-width: 1000px) {
+  .all-files {
+    flex-direction: column;
+    .file-item {
+      margin: 2rem 0;
     }
-    .file-icon {
-      display: block;
-      margin-right: 0.5rem;
-      justify-content: flex-start;
-      padding: 0 1rem;
-    }
+  }
+}
+@media screen and (max-width: 480px) {
+  .all-files {
+    flex-direction: column;
   }
 }
